# papers-are-papers

./: .gitignore  BOOT-PAPERS.cmd  PROJECT_CONTEXT.md  README.txt  hermes.lock.json  index-key-entry.html  index.html  package-lock.json  package.json  vite.config.ts
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: make-icon.ps1
src/: App.tsx  Companion.tsx  SettingsWizard.tsx  gateway.ts  inspect.test.ts  inspect.ts  key-entry.tsx  main.tsx  papers.ts  styles.css  types.ts  use-agent.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gateway_proxy.rs  hermes_provider_adapter.rs  main.rs  mcp.rs  models.rs  paths.rs  policy.rs  provider_catalog.rs  provider_runtime.rs  provider_service.rs  provider_state.rs  runtime.rs  self_edit.rs  storage.rs
ui/: index.html  styles.css
