[package]
name = "papers"
version = "0.2.0"
description = "A universal personal workspace layered over Windows."
authors = ["Papers are Papers"]
edition = "2021"
default-run = "papers"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["process", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
